@@ -40,7 +40,6 @@ import io.leego.rpa.util.QPredicate;
 import io.leego.rpa.util.Result;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.BeanUtils;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -50,13 +49,12 @@ import org.springframework.util.StringUtils;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.function.Function;
-import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 /**
@@ -84,17 +82,19 @@ public class RpaServiceImpl implements RpaService {
     }
 
     @Override
-    public Result<AppVO> getApp(String id) {
-        return Result.buildSuccess(appRepository.findById(id).map(this::toVO).orElse(null));
+    public Result<AppVO> getApp(Long id) {
+        return Result.buildSuccess(appRepository.findById(id).map(AppVO::from).orElse(null));
     }
 
     @Override
     public Result<Page<AppVO>> listApps(AppQueryDTO dto) {
         QPredicate predicate = QPredicate.create()
                 .and(QApp.app.id::in, dto.getIds())
+                .and(QApp.app.code::in, dto.getCodes())
                 .and(QApp.app.name::startsWith, dto.getName())
-                .and(QApp.app.createdTime::between, dto.getBeginCreatedTime(), dto.getEndCreatedTime());
-        return Result.buildSuccess(appRepository.findAll(predicate, dto).map(this::toVO));
+                .and(QApp.app.createdTime::between, dto.getBeginCreatedTime(), dto.getEndCreatedTime())
+                .and(QApp.app.status::eq, AppStatus.ENABLED.getCode());
+        return Result.buildSuccess(appRepository.findAll(predicate, dto).map(AppVO::from));
     }
 
     @Override
@@ -103,8 +103,8 @@ public class RpaServiceImpl implements RpaService {
         List<App> apps = dto.getApps()
                 .stream()
                 .map(o -> {
-                    App app = new App(o.getName(), AppStatus.ENABLED.getCode());
-                    if (StringUtils.hasText(o.getId())) {
+                    App app = new App(o.getCode(), o.getName(), AppStatus.ENABLED.getCode());
+                    if (o.getId() != null) {
                         app.setId(o.getId());
                         app.makeUpdatable();
                     }
@@ -112,12 +112,12 @@ public class RpaServiceImpl implements RpaService {
                 })
                 .collect(Collectors.toList());
         appRepository.saveAll(apps);
-        return Result.buildSuccess(apps.stream().map(this::toVO).collect(Collectors.toList()));
+        return Result.buildSuccess(apps.stream().map(AppVO::from).collect(Collectors.toList()));
     }
 
     @Override
-    public Result<UserVO> getUser(String id) {
-        return Result.buildSuccess(userRepository.findById(id).map(this::toVO).orElse(null));
+    public Result<UserVO> getUser(Long id) {
+        return Result.buildSuccess(userRepository.findById(id).map(UserVO::from).orElse(null));
     }
 
     @Override
@@ -129,14 +129,15 @@ public class RpaServiceImpl implements RpaService {
                 .and(QUser.user.nickname::startsWith, dto.getNickname())
                 .and(QUser.user.realname::startsWith, dto.getRealname())
                 .and(QUser.user.company::startsWith, dto.getCompany())
-                .and(QUser.user.createdTime::between, dto.getBeginCreatedTime(), dto.getEndCreatedTime());
-        return Result.buildSuccess(userRepository.findAll(predicate, dto).map(this::toVO));
+                .and(QUser.user.createdTime::between, dto.getBeginCreatedTime(), dto.getEndCreatedTime())
+                .and(QUser.user.status::eq, UserStatus.ENABLED.getCode());
+        return Result.buildSuccess(userRepository.findAll(predicate, dto).map(UserVO::from));
     }
 
     @Override
     @Transactional
     public Result<List<UserVO>> saveUsers(UserSaveDTO dto) {
-        List<String> appIds = dto.getUsers().stream().map(UserSaveDTO.UserDTO::getAppId).distinct().collect(Collectors.toList());
+        List<Long> appIds = dto.getUsers().stream().map(UserSaveDTO.UserDTO::getAppId).distinct().collect(Collectors.toList());
         List<App> apps = appRepository.findAllById(appIds);
         if (appIds.size() != apps.size()) {
             return Result.buildFailure(ErrorCode.APP_ABSENT);
@@ -150,7 +151,7 @@ public class RpaServiceImpl implements RpaService {
                     User user = new User(
                             o.getAppId(), o.getAccount(), o.getNickname(), o.getRealname(), o.getCompany(),
                             o.getPhone(), o.getAvatar(), UserStatus.ENABLED.getCode());
-                    if (StringUtils.hasText(o.getId())) {
+                    if (o.getId() != null) {
                         user.setId(o.getId());
                         user.makeUpdatable();
                     }
@@ -158,12 +159,12 @@ public class RpaServiceImpl implements RpaService {
                 })
                 .collect(Collectors.toList());
         userRepository.saveAll(users);
-        return Result.buildSuccess(users.stream().map(this::toVO).collect(Collectors.toList()));
+        return Result.buildSuccess(users.stream().map(UserVO::from).collect(Collectors.toList()));
     }
 
     @Override
-    public Result<TaskVO> getTask(String id) {
-        return Result.buildSuccess(taskRepository.findById(id).map(this::toVO).orElse(null));
+    public Result<TaskVO> getTask(Long id) {
+        return Result.buildSuccess(taskRepository.findById(id).map(TaskVO::from).orElse(null));
     }
 
     @Override
@@ -178,19 +179,19 @@ public class RpaServiceImpl implements RpaService {
                 .and(QTask.task.executedTime::between, dto.getBeginExecutedTime(), dto.getEndExecutedTime())
                 .and(QTask.task.finishedTime::between, dto.getBeginFinishedTime(), dto.getEndFinishedTime())
                 .and(QTask.task.createdTime::between, dto.getBeginCreatedTime(), dto.getEndCreatedTime());
-        return Result.buildSuccess(taskRepository.findAll(predicate, dto).map(this::toVO));
+        return Result.buildSuccess(taskRepository.findAll(predicate, dto).map(TaskVO::from));
     }
 
     @Override
     @Transactional
     public Result<List<TaskVO>> saveTasks(TaskSaveDTO dto) {
         // Return error if any task already exists
-        List<String> taskIds = dto.getTasks().stream().map(TaskSaveDTO.TaskDTO::getId).filter(StringUtils::hasText).collect(Collectors.toList());
+        List<Long> taskIds = dto.getTasks().stream().map(TaskSaveDTO.TaskDTO::getId).filter(Objects::nonNull).collect(Collectors.toList());
         if (!CollectionUtils.isEmpty(taskIds) && taskRepository.existsByIdIn(taskIds)) {
             return Result.buildFailure(ErrorCode.TASK_PRESENT);
         }
         // Find and verify users
-        List<String> userIds = dto.getTasks().stream().map(TaskSaveDTO.TaskDTO::getUserId).distinct().collect(Collectors.toList());
+        List<Long> userIds = dto.getTasks().stream().map(TaskSaveDTO.TaskDTO::getUserId).distinct().collect(Collectors.toList());
         List<User> users = userRepository.findAllById(userIds);
         if (userIds.size() != users.size()) {
             return Result.buildFailure(ErrorCode.USER_ABSENT);
@@ -199,21 +200,24 @@ public class RpaServiceImpl implements RpaService {
             return Result.buildFailure(ErrorCode.USER_DISABLED);
         }
         // user_id -> app_id
-        Map<String, String> userIdAppIdMap = users.stream().collect(Collectors.toMap(BaseEntity::getId, User::getAppId));
+        Map<Long, Long> userIdAppIdMap = users.stream().collect(Collectors.toMap(BaseEntity::getId, User::getAppId));
+        // app_id -> app_code
+        Map<Long, String> appMap = appRepository.findAll().stream().collect(Collectors.toMap(BaseEntity::getId, App::getCode));
         // dict_type = task_type:${app_id}
         List<String> dictTypes = users.stream().map(User::getAppId).distinct().map(o -> Constants.TASK_TYPE_PREFIX + o).collect(Collectors.toList());
-        // app_id -> task_type -> task_priority
+        // app_code -> task_type -> task_priority
         Map<String, Map<String, String>> appIdTaskTypeMap = dictRepository.findByTypeIn(dictTypes).stream()
                 .collect(Collectors.groupingBy(
                         o -> o.getType().substring(Constants.TASK_TYPE_PREFIX.length()),
                         Collectors.mapping(Function.identity(), Collectors.toMap(Dict::getKey, Dict::getValue))));
         // Verify task types
         for (TaskSaveDTO.TaskDTO task : dto.getTasks()) {
-            String appId = userIdAppIdMap.get(task.getUserId());
+            Long appId = userIdAppIdMap.get(task.getUserId());
             if (appId == null) {
                 return Result.buildFailure(ErrorCode.APP_ABSENT);
             }
-            Map<String, String> taskTypeMap = appIdTaskTypeMap.get(appId);
+            String appCode = appMap.get(appId);
+            Map<String, String> taskTypeMap = appIdTaskTypeMap.get(appCode);
             if (taskTypeMap == null || !taskTypeMap.containsKey(task.getType())) {
                 return Result.buildFailure(ErrorCode.TASK_TYPE_INVALID);
             }
@@ -221,19 +225,20 @@ public class RpaServiceImpl implements RpaService {
         List<Task> tasks = dto.getTasks()
                 .stream()
                 .map(o -> {
-                    String appId = userIdAppIdMap.get(o.getUserId());
+                    Long appId = userIdAppIdMap.get(o.getUserId());
+                    String appCode = appMap.get(appId);
                     Task task = new Task(
                             appId, o.getUserId(), o.getType(), TaskStatus.CREATED.getCode(),
                             o.getPriority(), o.getData(), null, null,
                             o.getScheduleTime(), null, null);
-                    if (StringUtils.hasText(o.getId())) {
+                    if (o.getId() != null) {
                         task.setId(o.getId());
                     }
                     if (task.getScheduleTime() == null) {
                         task.setScheduleTime(LocalDateTime.now());
                     }
                     if (task.getPriority() == null) {
-                        String priority = appIdTaskTypeMap.get(appId).get(task.getType());
+                        String priority = appIdTaskTypeMap.get(appCode).get(task.getType());
                         if (StringUtils.hasText(priority)) {
                             task.setPriority(Integer.parseInt(priority));
                         }
@@ -242,7 +247,7 @@ public class RpaServiceImpl implements RpaService {
                 })
                 .collect(Collectors.toList());
         taskRepository.saveAll(tasks);
-        return Result.buildSuccess(tasks.stream().map(this::toVO).collect(Collectors.toList()));
+        return Result.buildSuccess(tasks.stream().map(TaskVO::from).collect(Collectors.toList()));
     }
 
     @Override
@@ -257,19 +262,19 @@ public class RpaServiceImpl implements RpaService {
                     task.setStatus(TaskStatus.DELETED.getCode());
                 }
             }
-            result.add(toVO(task));
+            result.add(TaskVO.from(task));
         });
         return Result.buildSuccess(result);
     }
 
     @Override
     public Result<Page<ClientVO>> listClients(ClientQueryDTO dto) {
-        List<String> appIds = dto.getAppIds();
+        List<String> appCodes = dto.getAppCodes();
         Set<String> keys;
-        if (appIds.size() == 1 && appIds.get(0).equals("*")) {
+        if (appCodes.size() == 1 && appCodes.get(0).equals("*")) {
             keys = redisTemplate.keys(rpaProperties.getClient().getCacheKey() + "*");
         } else {
-            keys = appIds.stream()
+            keys = appCodes.stream()
                     .map(appId -> redisTemplate.keys(rpaProperties.getClient().getCacheKey() + appId + ":*"))
                     .filter(o -> !CollectionUtils.isEmpty(o))
                     .flatMap(Collection::stream)
@@ -285,21 +290,11 @@ public class RpaServiceImpl implements RpaService {
         List<ClientCacheDTO> caches = values.stream()
                 .filter(o -> o instanceof ClientCacheDTO)
                 .map(o -> (ClientCacheDTO) o)
-                .collect(Collectors.toList());
+                .toList();
         if (CollectionUtils.isEmpty(caches)) {
             return Result.buildSuccess(Page.empty());
         }
-        List<String> accounts = caches.stream()
-                .map(ClientCacheDTO::getAccount)
-                .filter(StringUtils::hasText)
-                .distinct()
-                .collect(Collectors.toList());
-        List<User> users = userRepository.findByAccountIn(accounts);
-        // app_id -> account -> user
-        Map<String, Map<String, User>> userMap = CollectionUtils.isEmpty(accounts)
-                ? Collections.emptyMap()
-                : users.stream().collect(Collectors.groupingBy(User::getAppId, Collectors.mapping(Function.identity(), Collectors.toMap(User::getAccount, Function.identity()))));
-        List<ClientVO> clients = caches.stream().map(o -> toVO(o, userMap.getOrDefault(o.getAppId(), Collections.emptyMap()).get(o.getAccount()))).collect(Collectors.toList());
+        List<ClientVO> clients = caches.stream().map(o -> ClientVO.from(o, null)).collect(Collectors.toList());
         return Result.buildSuccess(Page.of(clients));
     }
 
@@ -321,38 +316,5 @@ public class RpaServiceImpl implements RpaService {
                 TaskStatus.class.getSimpleName(), Option.of(TaskStatus.values(), TaskStatus::getCode, o -> messageConverter.convert(o.getName())),
                 ClientStatus.class.getSimpleName(), Option.of(ClientStatus.values(), ClientStatus::getCode, o -> messageConverter.convert(o.getName())),
                 ErrorCode.class.getSimpleName(), Option.of(ErrorCode.values(), ErrorCode::getCode, o -> messageConverter.convert(o.getMessage()))));
-    }
-
-    private AppVO toVO(App app) {
-        return copyProperties(app, AppVO::new);
-    }
-
-    private UserVO toVO(User user) {
-        return copyProperties(user, UserVO::new);
-    }
-
-    private TaskVO toVO(Task task) {
-        return copyProperties(task, TaskVO::new);
-    }
-
-    private ClientVO toVO(ClientCacheDTO client, User user) {
-        ClientVO vo = copyProperties(client, ClientVO::new);
-        if (user != null) {
-            vo.setUserId(user.getId());
-            vo.setNickname(user.getNickname());
-            vo.setRealname(user.getRealname());
-            vo.setCompany(user.getCompany());
-            vo.setPhone(user.getPhone());
-            vo.setAvatar(user.getAvatar());
-        }
-        return vo;
-    }
-
-    private <T> T copyProperties(Object source, Supplier<T> factory) {
-        T target = factory.get();
-        if (source != null) {
-            BeanUtils.copyProperties(source, target);
-        }
-        return target;
     }
 }
